--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,3 +3,36 @@ body{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+
+/* HEADINGS  */
+.header--main{
+    font-weight: normal;
+    font-size: 50px;
+    color: white;
+}
+
+.header--secondary{
+    color: white;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.header--sub-header{
+    font-size: 21px;
+    color: grey;
+}
+
+/* LINKS  */
+
+.link--cta{
+    font-size: 16px;
+    color: aquamarine;
+}
+
+/* FOOTER */
+.footer--copyright{
+    font-size: 16px;
+    color: grey;
+    font-size: 21px;
+    text-align: right;
